cambios en las configuraciones para agregar perfiles de uso. También coloqué localhost en los bootstrap de los pryectos para agilizar el proceso

--- a/02_servidor_eureka_config_cloud/src/main/resources/bootstrap.yml
+++ b/02_servidor_eureka_config_cloud/src/main/resources/bootstrap.yml
@@ -1,3 +1,4 @@
 spring:
   application:    name: servidor-eureka
-  cloud:    config:      uri: http://10.2.4.12:8888
+  cloud:    config:      uri: http://localhost:8888
+  profiles:    active:    - adrianapriv
