--- a/03_servidor_zuul/src/main/resources/bootstrap.yml
+++ b/03_servidor_zuul/src/main/resources/bootstrap.yml
@@ -3,6 +3,8 @@ spring:
     name: servidor-zuul
   cloud:
     config:
-      uri: http://10.2.4.12:8888
-      
+      uri: http://localhost:8888
+  profiles:
+    active:
+    - adrianapriv
       
