--- a/04_microservicio_autenticacion/pom.xml
+++ b/04_microservicio_autenticacion/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.47</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
