--- a/04_microservicio_autenticacion/src/main/resources/application.properties
+++ b/04_microservicio_autenticacion/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8005
+server.servlet.context-path=/autenticar
+spring.application.name=servicio-autenticar
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/seguridad
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+eureka.client.service-url.defaultZone=http://10.2.4.12:8761/eureka
+eureka.instance.ip-address=10.2.4.12
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=10.2.4.12:80005
