--- a/05_microservicio_sistema_alarmas/src/main/resources/application.properties
+++ b/05_microservicio_sistema_alarmas/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-eureka.client.service-url.defaultZone=http://10.2.4.12:8761/eureka
-eureka.instance.ip-address=10.2.4.12
-eureka.instance.prefer-ip-address=true
-eureka.instance.instance-id=10.2.4.12:8006
+client.url.logpolicia=http://servicio-logpolicia/alerta/instruso/
+
+spring.profiles.active=adripriv
