--- a/06_microservicio_log_policia/src/main/resources/application.properties
+++ b/06_microservicio_log_policia/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8006
-server.servlet.context-path=/alarmas
-spring.application.name=servicio-alarmas
+server.port=8007
+server.servlet.context-path=/alerta
+spring.application.name=servicio-logpolicia
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/segurjava
@@ -9,7 +9,5 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#client.url.logpolicia=http://servicio-logpolicia/zuullog/alerta/instruso/
 
 spring.profiles.active=adripriv
