Comm 1-12-19. Revisión de las configuraciones, el servidor zuul no me quiere coger el miscroservicio de log-policia cuando se llama desde el ms de alarmas

--- a/03_servidor_zuul/src/main/resources/application-adriclase.yml
+++ b/03_servidor_zuul/src/main/resources/application-adriclase.yml
@@ -1,6 +1,6 @@
 eureka:  client:    serviceUrl:
       defaultZone: http://10.2.4.12:8761/eureka
-  instance:    ip-address: 10.2.4.12
-    prefer-ip-address: true
-    instance-id: 10.2.4.12:8761
+#  instance:#    ip-address: 10.2.4.12
+#    prefer-ip-address: true
+#    instance-id: 10.2.4.12:7000
     
