--- a/03_servidor_zuul/src/main/resources/application.yml
+++ b/03_servidor_zuul/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 7000 # puerto del zuul service 
+  port: 7000
 zuul:
   ignoredServices: '*'  
   ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
   routes:
-      servicio-logpolicia: # Service to create as sample
-        path: /zuullog/** #path that will be intercepted
-        serviceId: servicio-logpolicia
-      servicio-alarmas: # Service to create as sample
-        path: /zuulalarma/** #path that will be intercepted
-        serviceId: servicio-alarmas
-spring:  profiles:    active:      adripriv  application:    name: servidor-zuul
+    servicio-logpolicia: 
+      path: /zuullog/**
+      serviceId: servicio-logpolicia
+    servicio-alarmas:
+      path: /zuulalarma/**
+      serviceId: servicio-alarmas
+spring:  profiles:    active:      adriclase  application:    name: servidor-zuul
