subida proyecto con mvc

--- a/06_microservicio_log_policia/src/main/resources/application.properties
+++ b/06_microservicio_log_policia/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.profiles.active=adriclase
+spring.profiles.active=adripriv
