--- a/02_servidor_eureka_config_cloud/src/main/resources/application.yml
+++ b/02_servidor_eureka_config_cloud/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 spring:
-  application:    name: servidor-eureka  profiles:    active:      adriclase
+  application:    name: servidor-eureka  profiles:    active:      adripriv
 server:
   port: 8761
