--- a/05_microservicio_sistema_alarmas/src/main/resources/application.properties
+++ b/05_microservicio_sistema_alarmas/src/main/resources/application.properties
@@ -10,6 +10,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#client.url.logpolicia=http://servicio-logpolicia/zuullog/alerta/intruso/
-
-spring.profiles.active=adriclase
+spring.profiles.active=adripriv
