--- a/03_servidor_zuul/src/main/resources/application.yml
+++ b/03_servidor_zuul/src/main/resources/application.yml
@@ -10,4 +10,4 @@ zuul:
     servicio-alarmas:
       path: /zuulalarma/**
       serviceId: servicio-alarmas
-spring:  profiles:    active:      adripriv  application:    name: servidor-zuul
+spring:  profiles:    active:      adriclase  application:    name: servidor-zuul
