--- a/07_microservicio_sistema_alarmas/src/main/resources/application.properties
+++ b/07_microservicio_sistema_alarmas/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.profiles.active=adriclase
+spring.profiles.active=adripriv
